# susi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  constants.hpp  course.cpp  course.hpp  course_type.hpp  io_handler.cpp  io_handler.hpp  main.cpp  major.cpp  major.hpp  passed_course.cpp  passed_course.hpp  string.cpp  string.hpp  student.cpp  student.hpp  student_status.hpp  susi.cpp  susi.hpp  susi_database.cpp  susi_database.hpp
db/: database.db  db2.db
html/: annotated.html  classCourse-members.html  classCourse.html  classDatabase-members.html  classDatabase.html  classIOHandler-members.html  classIOHandler.html  classMajor-members.html  classMajor.html  classPassedCourse-members.html  classPassedCourse.html  classSUSI-members.html  classSUSI.html  classSUSIApp-members.html  classSUSIApp.html  classString-members.html  classString.html  classStudent-members.html  classStudent.html  classes.html  constants_8hpp_source.html  course_8hpp_source.html  course__type_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  index.html  io__handler_8hpp_source.html  major_8hpp_source.html  md_README.html  menudata.js  pages.html  passed__course_8hpp_source.html  string_8hpp_source.html  student_8hpp_source.html  student__status_8hpp_source.html  susi_8hpp_source.html  susi__database_8hpp_source.html
latex/: annotated.tex  classCourse.eps  classCourse.tex  classDatabase.tex  classIOHandler.tex  classMajor.tex  classPassedCourse.eps  classPassedCourse.tex  classSUSI.tex  classSUSIApp.tex  classString.tex  classStudent.tex  (+4 more)
(+44 files in other folders)
